Single Price Grid Component

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <script src="./js/main.js" defer></script>
-    <title>Document</title>
+    <title>Single Price Grid Component</title>
   </head>
+
   <body>
-    Hello, world!
+    <article class="price-component">
+      <header class="community">
+        <h1>Join our community</h1>
+        <h2>30-day, hastle free money back garuntee</h2>
+        <p>
+          Gain access to our full library of tutorials along with expert code
+          reviews. Perfect for any developers who are serious about honing their
+          skills.
+        </p>
+      </header>
+      <section class="subscription">
+        <h1>Monthly Subsription</h1>
+        <h2 class="subscription-price">&dollar;29 <span>per month</span></h2>
+        <p>Full access for less than &dollar;1 a day</p>
+        <a href="#" class="btn">Sign Up</a>
+      </section>
+
+      <section class="why-us">
+        <h1>Why Us</h1>
+        <ul>
+          <li>Tutorials by industry experts</li>
+          <li>Peer &amp; expert code review</li>
+          <li>Coding exercises</li>
+          <li>Access to our GitHub repos</li>
+          <li>Community forum</li>
+          <li>Flashcard decks</li>
+          <li>New videos every week</li>
+        </ul>
+      </section>
+    </article>
   </body>
 </html>
